rnsc/tests/snapshots/error-lexer-directives-dot_dot_annotation.snap
---
source: rns-asm/tests/rns_test.rs
assertion_line: 210
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
..annotation
----- STDERR -----
[E-002] Error: unknown directive
   ╭─[ test_data/integration/error/lexer/directives/dot_dot_annotation.rns:1:1 ]
   │
 1 │ ..annotation
   │ ──────┬─────  
   │       ╰─────── '..annotation' is not a recognized directive
   │ 
   │ Help: Did you mean '.annotation'?
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-002
───╯
----- HASH -----
not generated
