rnsc/tests/snapshots/error-lexer-directives-dot_dot_class.snap
---
source: rns-asm/tests/rns_test.rs
assertion_line: 210
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.method
..class
----- STDERR -----
[E-002] Error: unknown directive
   ╭─[ test_data/integration/error/lexer/directives/dot_dot_class.rns:2:1 ]
   │
 2 │ ..class
   │ ───┬───  
   │    ╰───── '..class' is not a recognized directive
   │ 
   │ Help: Did you mean '.class'?
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-002
───╯
----- HASH -----
not generated
