rnsc/tests/snapshots/error-lexer-directives-dot_dot_end.snap
---
source: rns-asm/tests/rns_test.rs
assertion_line: 210
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.method

..class_end ; not valid
----- STDERR -----
[E-002] Error: unknown directive
   ╭─[ test_data/integration/error/lexer/directives/dot_dot_end.rns:3:1 ]
   │
 3 │ ..class_end ; not valid
   │ ─────┬─────  
   │      ╰─────── '..class_end' is not a recognized directive
   │ 
   │ Help: Did you mean '.class_end'?
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-002
───╯
----- HASH -----
not generated
