rnsc/tests/snapshots/error-lexer-directives-dot_dot_method.snap
---
source: rns-asm/tests/rns_test.rs
assertion_line: 210
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
..method
----- STDERR -----
[E-002] Error: unknown directive
   ╭─[ test_data/integration/error/lexer/directives/dot_dot_method.rns:1:1 ]
   │
 1 │ ..method
   │ ────┬───  
   │     ╰───── '..method' is not a recognized directive
   │ 
   │ Help: Did you mean '.method'?
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-002
───╯
----- HASH -----
not generated
