rnsc/tests/snapshots/error-lexer-directives-dot_dot_super.snap
---
source: rns-asm/tests/rns_test.rs
assertion_line: 210
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
dot_dot_super ..super
----- STDERR -----
[E-002] Error: unknown directive
   ╭─[ test_data/integration/error/lexer/directives/dot_dot_super.rns:1:15 ]
   │
 1 │ dot_dot_super ..super
   │               ───┬───  
   │                  ╰───── '..super' is not a recognized directive
   │ 
   │ Help: Did you mean '.super'?
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-002
───╯
----- HASH -----
not generated
