rnsc/tests/snapshots/error-lexer-directives-dot_integer.snap
---
source: rns-asm/tests/rns_test.rs
assertion_line: 210
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.method
.42 42 42 42 42


42 42 42 42 42
----- STDERR -----
[E-002] Error: unknown directive
   ╭─[ test_data/integration/error/lexer/directives/dot_integer.rns:2:1 ]
   │
 2 │ .42 42 42 42 42
   │ ─┬─  
   │  ╰─── '.42' is not a recognized directive
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-002
───╯
----- HASH -----
not generated
